[tool.poetry]
name = "pingtest"
version = "0.1.0"
description = "test network"
authors = ["zombie110year <zombie110year@outlook.com>"]
packages = [
    { include = "pingtest" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
